# v-horseshoe-v2

./: .env.example  .gitattributes  .gitignore  blueprint_manifest.json  patch_tests.py  pyproject.toml  requirements.txt  scaffold_v2.ps1  swarm_server.py
organism-console/: .gitignore  index.html  main.py  package-lock.json  package.json  tsconfig.app.json
organism-console/src/: main.tsx
scripts/: bootstrap.ps1
swarm_os/: .env.example  README.md  __init__.py  __main__.py  agent_runtime.py  brain.py  cycle.py  default.py  environment.py  genetics_legacy.py  governor.py  main.py  migrations.py  organism.py  registry.py  requirements.txt  restore.py  selection.py  settings.py  simulation_runner.py  snapshot.py  stress.py  swarm_kernel.py  tool_runtime.py
swarm_os.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
swarm_os/api/: admin.py  api_features.py  api_health.py  dashboard.py  explorer.py  features.py  health.py  routes.py  schemas.py
swarm_os/app/: main.py
swarm_os/apps/: simulation_runner.py
swarm_os/capabilities/: __init__.py  capability_router.py  chat_search.py  models.py  refactor.py  upwork_analyzer.py  vscode_automation.py
swarm_os/cognition/: reranking.py
swarm_os/config/: evolution.py  settings.py
swarm_os/core/: logging.py  settings.py
swarm_os/domain/: models.py  policies.py
tests/: mocks.py  test_admin_resume_latest.py  test_admin_snapshots.py  test_admin_status.py  test_dashboard.py  test_explorer.py  test_generation.py  test_resume_flow.py  test_run_state.py  test_simulation_service.py  test_snapshot_migrations.py
(+330 files in other folders)
